--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 		<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.united.min.css"/>
 		<link rel="stylesheet" href="assets/css/styles.css"/>
 	</head>
-    <body ng-controller="ApiLoadCtrl">
+    <body ng-controller="ApiLoadCtrl" onload="document.getElementById('input').focus()">
 		<div class="container">
-			<h2>Search for popular venues</h2>
+			<div id="top"></div>
+			<h2>Search for popular venues</h2>	
 			<div class="row">
 				<div class="input-group col-md-12">
-					<input class="form-control input-lg" type="text"  placeholder="Search location..." ng-model="near" />
+					<input id ="input" class="form-control input-lg" type="text"  placeholder="Search location..." ng-model="near" 
+							ng-keypress="loadLocations.enterKey($event, near)"/>
 					<span class="input-group-btn">
 						<button class="btn btn-info btn-lg" type="button" ng-click="loadLocations(near)">
 							<i class="glyphicon glyphicon-search"></i>
@@ -22,21 +24,36 @@
 			</div>
 			<div class="top-margin"></div>
 			<div class="row">
-				<ul class="list-group" ng-repeat="groups in result.data.response.groups"  ng-hide="showAlert">
-					<li class="list-group-item" ng-repeat="item in groups.items">					
-						<h4 class="title" ng-bind="item.venue.name"></h4>
-						<h5 class="item" ng-bind="item.venue.location.formattedAddress"></h5>
+				<ul class="list-group" ng-repeat="groups in result.data.response.groups" ng-hide="showAlert">
+					<li class="list-group-item" ng-repeat="item in groups.items">	
+						<div class="row">
+							<div class="col-xs-6 col-md-3">
+								<a class="thumbnail border" href="{{item.venue.url}}" target="_blank" ng-if="item.venue.url">
+									<img ng-src="{{item.venue.categories[0].icon.prefix}}bg_64{{item.venue.categories[0].icon.suffix}}">
+								</a>
+								<a class="thumbnail border" href="#" ng-if="!item.venue.url">
+									<img ng-src="{{item.venue.categories[0].icon.prefix}}bg_64{{item.venue.categories[0].icon.suffix}}">
+								</a>
+							</div>
+							<h4 class="title" ng-bind="item.venue.name"></h4>
+							<h5 class="item" ng-bind="item.venue.location.formattedAddress"></h5>
+						</div>				
 					</li>
+					<div class="top-margin"></div>
+					<a class="top" href="#top">Back to top
+						<i class="glyphicon glyphicon-circle-arrow-up"></i>			
+					</a>
 				</ul>
 			</div>
 			<div class="alert alert-danger" role="alert" ng-show="showAlert">
 				<h4><span class="glyphicon glyphicon-exclamation-sign" ng-bind="error"></span></h4>
 			</div>
-		</div><!-- container -->
+		</div><!-- 	container -->
 		
-		<script src="lib/jquery/dist/jquery.min.js"></script>
-		<script src="lib/jquery-ui/ui/jquery-ui.js"></script>
-        <script src="lib/angular/angular.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.12.4.min.js" 
+				integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="  crossorigin="anonymous"></script>
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 		
 		<script src="assets/js/app.js"></script>
     </body>
